Fix overflow in mobile version

--- a/index.css
+++ b/index.css
@@ -468,6 +468,7 @@ header {
 .news-cont {
   height: 450px;
   width: 100%;
+  margin-top: 60px;
 }
 
 .news-cont h2 {
@@ -1034,6 +1035,7 @@ header {
     height: 450px;
     width: 48%;
     margin-left: 5px;
+    margin-top: 0px;
   }
 
   #news-cont-last {
